# screenshot_mcp_server

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml
screenshot_mcp_server/: __init__.py
screenshot_mcp_server/client/: app.py
screenshot_mcp_server/server/: app.py
screenshot_mcp_server/tools/: screenshot.py
